# Groupe_4

./: .gitignore  README.md  api_key.txt  basing.py  data_viz.ipynb  enrich.py  enrichessement.py  events.csv  events.py  events_enriched.csv  events_kevin.py  get_bq_data.py  load_data.py  main.py  model_backup.py  playground.py  pyproject.toml  requirements.txt  scrapping.py  upload_bigquery.py  venue_capacities.json
.env/: pyvenv.cfg
.env/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
api/: requirements.txt
api/app/: get_bq_data.py  main.py  pagination.py  security_test.py
api/app/endpoint__get/: endpoint_1.py
api/app/endpoints/: gets_endpoints.py  puts_endpoints.py
api/app/security/: security.py
credentials/: sa-key-group-4.json
event/: event_10_oct.pkl  event_11_oct.pkl  event_12_oct.pkl  event_13_oct.pkl  event_14_oct.pkl  event_15_oct.pkl  event_16_oct.pkl  event_17_oct.pkl  event_18_oct.pkl  event_19_oct.pkl  event_20_oct.pkl  event_21_oct.pkl  event_22_oct.pkl  event_23_oct.pkl  event_24_oct.pkl  event_25_oct.pkl  event_26_oct.pkl  event_27_oct.pkl  event_28_oct.pkl  event_29_oct.pkl  event_30_oct.pkl  event_8_oct.pkl  event_9_oct.pkl
gautier/pièces jointes/: security.py  token_user.json
metadata/: artist_nationalities.json
model/: model.py  random_forest_popularity_model.pkl  venueName_encoder.pkl  venueType_encoder.pkl
