[tool.poetry]
name = "first-api"
version = "0.1.0"
description = ""
authors = ["kevin <kevinkenang1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
uvicorn = {extras = ["standard"], version = "^0.32.1"}
google-cloud-bigquery = "^3.27.0"
pip = "^24.3.1"
google-oauth2-tool = "^0.0.3"
google = "^3.0.0"
google-auth = "^2.36.0"
fastapi-pagination = "^0.12.32"
pandas = "^2.2.3"
db-dtypes = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
